# AIHedgeFund

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
apps/api/: __init__.py  alembic.ini  main.py
apps/api/alembic/: env.py
apps/api/core/: auth.py  config.py  logging.py  rate_limit.py  stripe_client.py
apps/api/v1/: router.py  schemas.py
apps/api/v1/endpoints/: auth.py  billing.py  companies.py  filings.py  holdings.py  signals.py  statements.py  usage.py
apps/web/: package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/datasets/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/pricing/: page.tsx
apps/web/src/app/signup/: page.tsx
apps/workers/: __init__.py  config.py
apps/workers/jobs/: __init__.py  ingest_companies.py  ingest_filings.py  parse_filing.py
infra/docker/: .dockerignore  Dockerfile.api  Dockerfile.workers
scripts/: backfill.py  init_db.sql  seed_data.py
